--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -63,7 +63,6 @@
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-
 .dropdown {
   position: relative;
   display: inline-block;
@@ -89,7 +88,7 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .dropdown-menu:after {
-  content: '';
+  content: "";
   position: absolute;
   top: -8px;
   left: 50%;
