--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -3,115 +3,115 @@
 @tailwind utilities;
 /* The container must be positioned relative: */
 .custom-select {
-  position: relative;
-  font-family: Arial;
+    position: relative;
+    font-family: Arial;
 }
 
 .custom-select select {
-  display: s; /*hide original SELECT element: */
+    display: s; /*hide original SELECT element: */
 }
 
 .select-selected {
-  background-color: red;
+    background-color: red;
 }
 
 /* Style the arrow inside the select element: */
 .select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
+    position: absolute;
+    content: '';
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
 }
 
 /* Point the arrow upwards when the select box is open (active): */
 .select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
 }
 
 /* style the items (options), including the selected item: */
 .select-items,
 .select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
 }
 
 /* Style items (options): */
 .select-items {
-  position: absolute;
-  background-color: DodgerBlue;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
+    position: absolute;
+    background-color: DodgerBlue;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
 }
 
 /* Hide the items when the select box is closed: */
 .select-hide {
-  display: none;
+    display: none;
 }
 
 .select-items div:hover,
 .same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
-  width: 150px;
+    position: relative;
+    display: inline-block;
+    width: 150px;
 }
 
 .dropdown-toggle {
-  padding: 8px 12px;
-  border: 1px solid #334155;
-  background-color: #334155;
-  cursor: pointer;
+    padding: 8px 12px;
+    border: 1px solid #334155;
+    background-color: #334155;
+    cursor: pointer;
 }
 
 .dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  width: 150px;
-  display: none;
-  z-index: 1;
-  padding: 8px;
-  background-color: #334155;
-  border: 1px solid #ccc;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    width: 150px;
+    display: none;
+    z-index: 1;
+    padding: 8px;
+    background-color: #334155;
+    border: 1px solid #ccc;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .dropdown-menu:after {
-  content: "";
-  position: absolute;
-  width: 150px;
-  top: -8px;
-  left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  width: 12px;
-  height: 12px;
-  background-color: #334155;
-  border-top: 1px solid #ccc;
-  border-left: 1px solid #ccc;
+    content: '';
+    position: absolute;
+    width: 150px;
+    top: -8px;
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
+    width: 12px;
+    height: 12px;
+    background-color: #334155;
+    border-top: 1px solid #ccc;
+    border-left: 1px solid #ccc;
 }
 
 .dropdown-menu[data-dropdown-menu] {
-  display: block;
+    display: block;
 }
 
 .dropdown-menu-item {
-  padding: 8px 12px;
-  cursor: pointer;
+    padding: 8px 12px;
+    cursor: pointer;
 }
 
 .dropdown-menu-item:hover {
-  background-color: #334155;
+    background-color: #334155;
 }
