--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,6 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* create custom classes for headings to use in tiptap editor */
+h1.my-custom-heading {
+    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+h2.my-custom-heading {
+    @apply scroll-m-16 text-3xl font-extrabold tracking-tight lg:text-4xl;
+}
+h3.my-custom-heading {
+    @apply scroll-m-12 text-2xl font-bold tracking-tight lg:text-3xl;
+}
+h4.my-custom-heading {
+    @apply scroll-m-10 text-xl font-bold tracking-tight lg:text-2xl;
+}
+h5.my-custom-heading {
+    @apply scroll-m-8 text-lg font-bold tracking-tight lg:text-xl;
+}
+h6.my-custom-heading {
+    @apply scroll-m-6 text-base font-bold tracking-tight lg:text-lg;
+}   
 /* The container must be positioned relative: */
 .custom-select {
     position: relative;
